CSS - Related Series Entries: made it! Image on left, name/title on right/remaining space. Removed showing the index - general light mode colour fixing - displaying artwork: added bg colour to the page X/Y and added a nice border around it and the slideshow thumbnails so it looks nicer. Tested in light and dark mode

--- a/src/css/filterByTag.css
+++ b/src/css/filterByTag.css
@@ -79,8 +79,7 @@
         display: block;
         position: relative;
         object-fit: cover;
-        border-top-right-radius: 0rem;
-        border-bottom-right-radius: 0rem;
+        border-radius: 0rem;
     }
 }
 
